# ice-cream-dataops

./: cdf.toml  pyproject.toml
ice-cream-dataops/: config.test.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.Group.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/datasets/: data_sets.DataSet.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.Group.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/datasets/: data_sets.DataSet.yaml
